src/test/deca/context/valid/provided/test15.deca
class A{
    protected int x;
    void methodasm(int x)
        asm("
        je suis fort en assembleur
        ");
    
}
