src/test/deca/context/invalid/provided/testi04.deca
class A{
    void x(){}
}
class B extends A{
    protected int x;
}